--- a/INTITA/Common/AlertView/AlertView.xib
+++ b/INTITA/Common/AlertView/AlertView.xib
@@ -8,14 +8,14 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
-        <array key="Roboto-Regular.ttf">
-            <string>Roboto-Regular</string>
+        <array key="MyriadPro-Regular.ttf">
+            <string>MyriadPro-Regular</string>
         </array>
     </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="iN0-l3-epB" customClass="AlertView" customModule="INTITA" customModuleProvider="target">
+        <view alpha="0.0" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="iN0-l3-epB" customClass="AlertView" customModule="INTITA" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="429" height="349"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -27,7 +27,7 @@
                             <constraints>
                                 <constraint firstAttribute="height" constant="40" id="v29-oY-6MR"/>
                             </constraints>
-                            <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="28"/>
+                            <fontDescription key="fontDescription" name="MyriadPro-Regular" family="Myriad Pro" pointSize="28"/>
                             <color key="textColor" name="mainColor"/>
                             <color key="highlightedColor" name="mainColor"/>
                             <color key="shadowColor" name="shadow"/>
@@ -56,7 +56,7 @@
                             <constraints>
                                 <constraint firstAttribute="height" constant="55" id="ufr-CT-4ff"/>
                             </constraints>
-                            <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="24"/>
+                            <fontDescription key="fontDescription" name="MyriadPro-Regular" family="Myriad Pro" pointSize="24"/>
                             <state key="normal">
                                 <color key="titleColor" name="mainColor"/>
                                 <color key="titleShadowColor" name="shadow"/>
