--- a/INTITA/Common/AlertView/AlertView.xib
+++ b/INTITA/Common/AlertView/AlertView.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
@@ -15,84 +15,111 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view alpha="0.0" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="iN0-l3-epB" customClass="AlertView" customModule="INTITA" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="429" height="349"/>
+        <view alpha="0.0" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" id="iN0-l3-epB" customClass="AlertView" customModule="INTITA" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <stackView opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" axis="vertical" distribution="equalSpacing" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="nIo-Mf-h28">
-                    <rect key="frame" x="24" y="24" width="381" height="301"/>
+                <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lQt-w4-qkG">
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                    <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="8EP-8e-1WF">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                    </view>
+                    <blurEffect style="regular"/>
+                </visualEffectView>
+                <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TY9-NT-CzO">
+                    <rect key="frame" x="24" y="253.66666666666663" width="366" height="349"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pv3-T0-x4h">
-                            <rect key="frame" x="0.0" y="0.0" width="381" height="40"/>
+                        <stackView opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" axis="vertical" distribution="equalSpacing" alignment="center" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="nIo-Mf-h28">
+                            <rect key="frame" x="24" y="24.000000000000028" width="318" height="301"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pv3-T0-x4h">
+                                    <rect key="frame" x="0.0" y="0.0" width="318" height="40"/>
+                                    <accessibility key="accessibilityConfiguration">
+                                        <accessibilityTraits key="traits" staticText="YES" notEnabled="YES"/>
+                                    </accessibility>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="40" id="v29-oY-6MR"/>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" name="MyriadPro-Regular" family="Myriad Pro" pointSize="28"/>
+                                    <color key="textColor" name="mainColor"/>
+                                    <color key="highlightedColor" name="mainColor"/>
+                                    <color key="shadowColor" name="shadow"/>
+                                    <size key="shadowOffset" width="0.0" height="0.0"/>
+                                </label>
+                                <textView clipsSubviews="YES" clearsContextBeforeDrawing="NO" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" editable="NO" usesAttributedText="YES" translatesAutoresizingMaskIntoConstraints="NO" id="AWd-vx-ddb">
+                                    <rect key="frame" x="0.0" y="64" width="318" height="158"/>
+                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="158" id="6r5-fI-umW"/>
+                                    </constraints>
+                                    <attributedString key="attributedText">
+                                        <fragment content="Text">
+                                            <attributes>
+                                                <color key="NSColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <font key="NSFont" size="16" name="MyriadPro-Light"/>
+                                                <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                            </attributes>
+                                        </fragment>
+                                    </attributedString>
+                                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    <dataDetectorType key="dataDetectorTypes" phoneNumber="YES"/>
+                                </textView>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iKW-La-iuo">
+                                    <rect key="frame" x="0.0" y="245.99999999999994" width="318" height="55"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="55" id="ufr-CT-4ff"/>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" name="MyriadPro-Regular" family="Myriad Pro" pointSize="24"/>
+                                    <state key="normal">
+                                        <color key="titleColor" name="mainColor"/>
+                                        <color key="titleShadowColor" name="shadow"/>
+                                    </state>
+                                </button>
+                            </subviews>
                             <constraints>
-                                <constraint firstAttribute="height" constant="40" id="v29-oY-6MR"/>
+                                <constraint firstItem="Pv3-T0-x4h" firstAttribute="leading" secondItem="nIo-Mf-h28" secondAttribute="leading" id="CKV-TN-vZf"/>
+                                <constraint firstAttribute="trailing" secondItem="Pv3-T0-x4h" secondAttribute="trailing" id="JdE-mr-WyM"/>
+                                <constraint firstAttribute="height" constant="301" id="OUU-4t-R75"/>
+                                <constraint firstAttribute="trailing" secondItem="iKW-La-iuo" secondAttribute="trailing" id="gau-ui-PED"/>
+                                <constraint firstItem="AWd-vx-ddb" firstAttribute="width" secondItem="nIo-Mf-h28" secondAttribute="width" id="hp3-yR-mY2"/>
+                                <constraint firstAttribute="bottom" secondItem="iKW-La-iuo" secondAttribute="bottom" id="iSJ-FP-vrl"/>
+                                <constraint firstItem="iKW-La-iuo" firstAttribute="leading" secondItem="nIo-Mf-h28" secondAttribute="leading" id="qmR-Ny-buv"/>
                             </constraints>
-                            <fontDescription key="fontDescription" name="MyriadPro-Regular" family="Myriad Pro" pointSize="28"/>
-                            <color key="textColor" name="mainColor"/>
-                            <color key="highlightedColor" name="mainColor"/>
-                            <color key="shadowColor" name="shadow"/>
-                            <size key="shadowOffset" width="0.0" height="0.0"/>
-                        </label>
-                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" editable="NO" usesAttributedText="YES" translatesAutoresizingMaskIntoConstraints="NO" id="AWd-vx-ddb">
-                            <rect key="frame" x="0.0" y="64" width="381" height="158"/>
-                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="158" id="6r5-fI-umW"/>
-                            </constraints>
-                            <attributedString key="attributedText">
-                                <fragment content="Text">
-                                    <attributes>
-                                        <color key="NSColor" systemColor="labelColor"/>
-                                        <font key="NSFont" size="16" name="Roboto-Thin"/>
-                                        <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
-                                    </attributes>
-                                </fragment>
-                            </attributedString>
-                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            <dataDetectorType key="dataDetectorTypes" phoneNumber="YES"/>
-                        </textView>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iKW-La-iuo">
-                            <rect key="frame" x="0.0" y="246" width="381" height="55"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="55" id="ufr-CT-4ff"/>
-                            </constraints>
-                            <fontDescription key="fontDescription" name="MyriadPro-Regular" family="Myriad Pro" pointSize="24"/>
-                            <state key="normal">
-                                <color key="titleColor" name="mainColor"/>
-                                <color key="titleShadowColor" name="shadow"/>
-                            </state>
-                            <connections>
-                                <action selector="backButtonTapped" destination="iN0-l3-epB" eventType="touchUpInside" id="tJ8-gs-wV0"/>
-                            </connections>
-                        </button>
+                        </stackView>
                     </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstItem="Pv3-T0-x4h" firstAttribute="leading" secondItem="nIo-Mf-h28" secondAttribute="leading" id="CKV-TN-vZf"/>
-                        <constraint firstItem="Pv3-T0-x4h" firstAttribute="top" secondItem="nIo-Mf-h28" secondAttribute="top" id="JEO-my-bxy"/>
-                        <constraint firstAttribute="trailing" secondItem="Pv3-T0-x4h" secondAttribute="trailing" id="JdE-mr-WyM"/>
-                        <constraint firstAttribute="trailing" secondItem="iKW-La-iuo" secondAttribute="trailing" id="gau-ui-PED"/>
-                        <constraint firstAttribute="bottom" secondItem="iKW-La-iuo" secondAttribute="bottom" id="iSJ-FP-vrl"/>
-                        <constraint firstItem="iKW-La-iuo" firstAttribute="leading" secondItem="nIo-Mf-h28" secondAttribute="leading" id="qmR-Ny-buv"/>
+                        <constraint firstItem="nIo-Mf-h28" firstAttribute="centerY" secondItem="TY9-NT-CzO" secondAttribute="centerY" id="5rJ-1v-wZs"/>
+                        <constraint firstItem="nIo-Mf-h28" firstAttribute="centerX" secondItem="TY9-NT-CzO" secondAttribute="centerX" id="M4V-XP-Tdw"/>
+                        <constraint firstAttribute="trailing" secondItem="nIo-Mf-h28" secondAttribute="trailing" constant="24" id="XZl-nL-sRF"/>
+                        <constraint firstItem="nIo-Mf-h28" firstAttribute="leading" secondItem="TY9-NT-CzO" secondAttribute="leading" constant="24" id="f3T-iU-wfo"/>
+                        <constraint firstAttribute="height" constant="349" id="yxa-5C-q2Y"/>
                     </constraints>
-                </stackView>
+                </view>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="nIo-Mf-h28" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="24" id="6la-XK-DnX"/>
-                <constraint firstAttribute="trailing" secondItem="nIo-Mf-h28" secondAttribute="trailing" constant="24" id="IbM-hn-FyV"/>
-                <constraint firstAttribute="bottom" secondItem="nIo-Mf-h28" secondAttribute="bottom" constant="24" id="Q6D-vT-y4k"/>
-                <constraint firstItem="nIo-Mf-h28" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="24" id="Ykc-Zn-JwB"/>
+                <constraint firstItem="TY9-NT-CzO" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="24" id="2MV-Ky-D76"/>
+                <constraint firstItem="lQt-w4-qkG" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="5Uf-u8-qGl"/>
+                <constraint firstItem="lQt-w4-qkG" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="bsX-pD-sha"/>
+                <constraint firstItem="TY9-NT-CzO" firstAttribute="centerY" secondItem="lQt-w4-qkG" secondAttribute="centerY" constant="-20" id="gTm-6F-aIO"/>
+                <constraint firstAttribute="trailing" secondItem="TY9-NT-CzO" secondAttribute="trailing" constant="24" id="l0o-Fu-jan"/>
+                <constraint firstAttribute="trailing" secondItem="lQt-w4-qkG" secondAttribute="trailing" id="mXY-p6-9dC"/>
+                <constraint firstItem="TY9-NT-CzO" firstAttribute="centerX" secondItem="lQt-w4-qkG" secondAttribute="centerX" id="njL-jJ-DUk"/>
+                <constraint firstAttribute="bottom" secondItem="lQt-w4-qkG" secondAttribute="bottom" id="rQL-Ye-VJv"/>
             </constraints>
             <nil key="simulatedTopBarMetrics"/>
             <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <edgeInsets key="layoutMargins" top="8" left="8" bottom="8" right="8"/>
             <connections>
+                <outlet property="alertView" destination="TY9-NT-CzO" id="CXQ-cc-Nbj"/>
                 <outlet property="backButton" destination="iKW-La-iuo" id="I38-J6-z6w"/>
+                <outlet property="blurView" destination="lQt-w4-qkG" id="lNA-2h-UQm"/>
                 <outlet property="errorHeader" destination="Pv3-T0-x4h" id="WwG-GU-PvN"/>
-                <outlet property="errorMessage" destination="AWd-vx-ddb" id="gbB-1G-Tg2"/>
+                <outlet property="errorMessage" destination="AWd-vx-ddb" id="Pol-IZ-J9F"/>
             </connections>
-            <point key="canvasLocation" x="218" y="-280"/>
+            <point key="canvasLocation" x="392.75362318840581" y="-170.42410714285714"/>
         </view>
     </objects>
     <resources>
@@ -102,9 +129,6 @@
         <namedColor name="shadow">
             <color red="0.0" green="0.0" blue="0.0" alpha="0.25" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <systemColor name="labelColor">
-            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
