Log in screen as table view

--- a/INTITA/Modules/LogInScreen/LogIn.storyboard
+++ b/INTITA/Modules/LogInScreen/LogIn.storyboard
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="QqK-Yh-PRA">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="hyP-iW-Kkc">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Log In View Controller-->
+        <!--Log In View Controllerфвц-->
         <scene sceneID="Wx1-VW-lNf">
             <objects>
-                <viewController storyboardIdentifier="LogInViewController" id="QqK-Yh-PRA" customClass="LogInViewController" customModule="INTITA" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LogInViewControllerdd" id="QqK-Yh-PRA" customClass="LogInViewControllerфвц" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="r4L-IO-DEa">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -157,7 +157,38 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WDF-Lf-Ysq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="192.75362318840581" y="96.428571428571431"/>
+            <point key="canvasLocation" x="-443" y="33"/>
+        </scene>
+        <!--Log In View Controller-->
+        <scene sceneID="7IM-BR-xbc">
+            <objects>
+                <viewController storyboardIdentifier="LogInViewController" id="hyP-iW-Kkc" customClass="LogInViewController" customModule="INTITA" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="6SK-Uu-4OS">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Fpd-gi-ivE">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <sections/>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="zKu-Pj-Xth"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Fpd-gi-ivE" firstAttribute="leading" secondItem="zKu-Pj-Xth" secondAttribute="leading" id="Kgg-Zw-tWZ"/>
+                            <constraint firstItem="Fpd-gi-ivE" firstAttribute="top" secondItem="zKu-Pj-Xth" secondAttribute="top" id="QZX-9y-cRB"/>
+                            <constraint firstItem="zKu-Pj-Xth" firstAttribute="trailing" secondItem="Fpd-gi-ivE" secondAttribute="trailing" id="Y8d-2q-IcK"/>
+                            <constraint firstItem="Fpd-gi-ivE" firstAttribute="bottom" secondItem="zKu-Pj-Xth" secondAttribute="bottom" id="tOa-qR-TPI"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="Fpd-gi-ivE" id="4O8-Gc-1Qo"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gjj-sw-09Q" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="542" y="33"/>
         </scene>
     </scenes>
     <resources>
