--- a/INTITA/Modules/LogInScreen/LogInCells/TextTableViewCell.xib
+++ b/INTITA/Modules/LogInScreen/LogInCells/TextTableViewCell.xib
@@ -24,29 +24,28 @@
                             <action selector="didBeginEditing:" destination="KGk-i7-Jjw" eventType="editingDidBegin" id="FGK-4g-AW6"/>
                         </connections>
                     </textField>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6hf-iG-osq">
-                        <rect key="frame" x="16" y="99" width="369" height="43.5"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                        <color key="textColor" red="1" green="0.36862435329999999" blue="0.51020655709999996" alpha="0.84705882349999995" colorSpace="custom" customColorSpace="displayP3"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="exclamationmark.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="C17-y3-Nmd">
-                        <rect key="frame" x="316" y="16.5" width="65" height="64.5"/>
+                        <rect key="frame" x="317" y="24.5" width="52" height="51"/>
                         <color key="tintColor" red="1" green="0.36862435329999999" blue="0.51020655709999996" alpha="0.84705882349999995" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="C17-y3-Nmd" secondAttribute="height" multiplier="1:1" id="Qdx-0S-eDv"/>
                         </constraints>
                     </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6hf-iG-osq">
+                        <rect key="frame" x="16" y="99" width="369" height="16"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <color key="textColor" red="1" green="0.36862435329999999" blue="0.51020655709999996" alpha="0.84705882349999995" colorSpace="custom" customColorSpace="displayP3"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="C17-y3-Nmd" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="DVV-6a-zk6"/>
+                    <constraint firstItem="C17-y3-Nmd" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" multiplier="0.69" id="DbS-jI-FoG"/>
                     <constraint firstItem="PHC-3C-b15" firstAttribute="height" secondItem="H2p-sc-9uM" secondAttribute="height" multiplier="0.6" id="ENf-eK-8N7"/>
                     <constraint firstItem="6hf-iG-osq" firstAttribute="top" secondItem="PHC-3C-b15" secondAttribute="bottom" constant="4" id="LuQ-W9-sic"/>
-                    <constraint firstItem="C17-y3-Nmd" firstAttribute="height" secondItem="PHC-3C-b15" secondAttribute="height" multiplier="0.75" id="QLm-0Y-800"/>
-                    <constraint firstItem="6hf-iG-osq" firstAttribute="height" secondItem="H2p-sc-9uM" secondAttribute="height" multiplier="0.3" id="Qp4-og-fMa"/>
+                    <constraint firstItem="C17-y3-Nmd" firstAttribute="height" secondItem="PHC-3C-b15" secondAttribute="height" multiplier="0.6" id="QLm-0Y-800"/>
                     <constraint firstItem="6hf-iG-osq" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="XkX-zZ-hqX"/>
                     <constraint firstItem="PHC-3C-b15" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="hCf-Ir-K0x"/>
-                    <constraint firstAttribute="trailing" secondItem="C17-y3-Nmd" secondAttribute="trailing" constant="20" id="nP0-dI-OHd"/>
+                    <constraint firstAttribute="trailing" secondItem="C17-y3-Nmd" secondAttribute="trailing" constant="32" id="nP0-dI-OHd"/>
                     <constraint firstItem="PHC-3C-b15" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="pYl-O5-Vgw"/>
                     <constraint firstItem="6hf-iG-osq" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="pnu-ai-VV2"/>
                     <constraint firstItem="PHC-3C-b15" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="rOP-M1-k59"/>
