--- a/INTITA/Modules/LogInScreen/LogIn.storyboard
+++ b/INTITA/Modules/LogInScreen/LogIn.storyboard
@@ -33,6 +33,8 @@
                     </view>
                     <connections>
                         <outlet property="tableView" destination="Fpd-gi-ivE" id="4O8-Gc-1Qo"/>
+                        <outlet property="tableViewBottomContraint" destination="tOa-qR-TPI" id="LEl-ha-wHe"/>
+                        <outlet property="tableViewTopConstraint" destination="QZX-9y-cRB" id="X0n-f1-Qe1"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gjj-sw-09Q" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
